<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingVertical="40dp"
    android:background="@color/yellow">

    <TextView
        android:id="@+id/prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/cardview_dark_background"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:text="@string/insert_prompt"
        android:layout_marginTop="70dp"
        app:layout_constraintLeft_toLeftOf="@id/username"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:id="@+id/username"
        android:hint="@string/username"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prompt">
    </EditText>

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username">
    </EditText>

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/name"
        android:hint="@string/name"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password">
    </EditText>

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/email"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name">
    </EditText>

    <Button
        android:id="@+id/submit"
        android:layout_width="0dp"
        android:text="Save Player"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="@id/username"
        app:layout_constraintRight_toRightOf="@id/username"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:background="@color/red"/>

    <TextView
        android:id="@+id/missing_fields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:visibility="invisible"
        android:textSize="16sp"
        android:text="@string/invalid_info"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="@id/username"
        app:layout_constraintRight_toRightOf="@id/username"
        app:layout_constraintTop_toBottomOf="@id/submit" />

    </androidx.constraintlayout.widget.ConstraintLayout>